Fixed a few minor style inconsistencies, created all but one unit test, fixed a few hard to find bugs based on the creation of the unit tests, updated a few methods based on the unit test creation.